--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-ws": "^5.0.2",
+    "fuzzy": "^0.1.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.4",
     "pg": "^8.13.1"
